# src/main/resources/swagger/swagger-input.yml
@@ -42,7 +42,31 @@ paths:
           description: "Invalid input"
         500:
           description: "Internal server error"
-
+    get:
+      tags:
+      - "doctor"
+      summary: "search profiles of a patient"
+      description: "search profiles by patientId"
+      operationId: "searchProfilesByPatientId"
+      produces:
+        "application/json"
+      parameters:
+      - in: "path"
+        name: "id"
+        description: "Id of a patient"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "profiles found"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/MedicalTreatmentProfile"
+        400:
+          description: "Invalid input"
+        500:
+          description: "Internal server error"
   v1/patients:
     get:
       tags:
@@ -115,6 +139,9 @@ definitions:
   MedicalTreatmentProfile:
     type: "object"
     properties:
+      id:
+        type: "number"
+        format: "long"
       profileId:
         type: "string"
       createdDate:
@@ -142,6 +169,9 @@ definitions:
   MedicalTestResult:
     type: "object"
     properties:
+      id:
+        type: "number"
+        format: "long"
       bloodType:
         type: "string"
         example: "O"
@@ -159,6 +189,9 @@ definitions:
   Prescription:
     type: "object"
     properties:
+      id:
+        type: "number"
+        format: "long"
       recentlyUsed:
         type: "array"
         items:
@@ -170,6 +203,9 @@ definitions:
   GivenMedicine:
     type: "object"
     properties:
+      id:
+        type: "number"
+        format: "long"
       name:
         type: "string"
         example: "Paracetamol 500"
